@@ -10,7 +10,7 @@ public class DepartmentsTest {
     @Test
     public void whenMissed() {
         List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -18,7 +18,7 @@ public class DepartmentsTest {
     @Test
     public void whenNonChange() {
         List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -26,7 +26,7 @@ public class DepartmentsTest {
     @Test
     public void whenMissed1() {
         List<String> input = Arrays.asList("k1", "k1/sk1/ssk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k1/sk1/ssk1");
+        List<String> expect = List.of("k1", "k1/sk1", "k1/sk1/ssk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -34,7 +34,7 @@ public class DepartmentsTest {
     @Test
     public void sortDesc() {
         List<String> input = Arrays.asList("k1", "k2/sk2", "k1/sk1/ssk2", "k1/sk1", "k2");
-        List<String> expect = Arrays.asList("k2", "k2/sk2", "k1", "k1/sk1", "k1/sk1/ssk2");
+        List<String> expect = List.of("k2", "k2/sk2", "k1", "k1/sk1", "k1/sk1/ssk2");
         Departments.sortDesc(input);
         assertThat(input, is(expect));
     }
@@ -42,7 +42,7 @@ public class DepartmentsTest {
     @Test
     public void sortAsc() {
         List<String> input = Arrays.asList("k1", "k2/sk2", "k1/sk1/ssk2", "k1/sk1", "k2");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k1/sk1/ssk2", "k2", "k2/sk2");
+        List<String> expect = List.of("k1", "k1/sk1", "k1/sk1/ssk2", "k2", "k2/sk2");
         Departments.sortAsc(input);
         assertThat(input, is(expect));
     }
